--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
 title                    : "Ruibo Fan's Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Ruibo"
 description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : "https://ruibo-fan.github.io" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
@@ -25,7 +25,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Ruibo Fan"
-  pronouns         : "He"
+  pronouns         :  #
   bio              : "Final Year Ph.D Candidate"
   location         : "Guangzhou, China"
   employer         : "HKUST-GZ"
