--- a/_config.yml
+++ b/_config.yml
@@ -227,7 +227,7 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  :
+  portfolio:
     output: true
     permalink: /:collection/:path/
   talks:
