--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Ruibo Fan"
   pronouns         :  #
-  bio              : "Final Year Ph.D Candidate"
+  bio              : "Final Year Ph.D. Candidate"
   location         : "Guangzhou, China"
   employer         : "HKUST-GZ"
   uri              : "https://ruibo-fan.github.io"
